--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,9 @@
+[server]
+headless = true
+enableCORS = false
+
 [theme]
-base="light"
+base="light"  # This sets the app to light mode
+
+[layout]
+wide = true  # This enables wide mode for the app
